# pipeworks_name_generation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  release-please-config.json  requirements-dev.txt  server.example.ini  syllables.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-please.yml
_working/: analysis_refactor.md
build_tools/: __init__.py  syllable_extractor.py
build_tools/corpus_db/: ledger.py
build_tools/corpus_db_viewer/: __init__.py  __main__.py  app.py  cli.py  formatters.py  queries.py
build_tools/corpus_sqlite_builder/: __main__.py  cli.py
build_tools/name_combiner/: __init__.py  __main__.py  cli.py
build_tools/name_renderer/: __init__.py  render.py  rules.yml
build_tools/name_selector/: __init__.py  __main__.py  cli.py  selector.py
build_tools/nltk_syllable_extractor/: __init__.py  __main__.py  batch.py  cli.py  extractor.py  file_io.py  interactive.py  models.py
build_tools/nltk_syllable_normaliser/: __init__.py  cli.py
build_tools/pipeline_tui/: __init__.py  __main__.py
build_tools/pipeline_tui/core/: __init__.py  app.py  state.py
build_tools/pipeline_tui/screens/: __init__.py  configure.py  file_selector.py
build_tools/pipeline_tui/services/: __init__.py  pipeline.py  validators.py
build_tools/pyphen_syllable_extractor/: __init__.py  __main__.py  batch.py  cli.py  extractor.py  file_io.py  interactive.py  language_detection.py  languages.py  models.py
build_tools/pyphen_syllable_normaliser/: __init__.py  __main__.py  aggregator.py  cli.py  frequency.py  models.py  normalizer.py
build_tools/syllable_analysis/: __init__.py  feature_signatures.py  random_sampler.py  tsne_visualizer.py
build_tools/syllable_analysis/common/: __init__.py  data_io.py  output.py  paths.py
build_tools/syllable_analysis/dimensionality/: __init__.py  feature_matrix.py  mapping.py  tsne_core.py
build_tools/syllable_analysis/plotting/: __init__.py  interactive.py  static.py  styles.py
build_tools/syllable_extractor/: __init__.py  __main__.py  cli.py  extractor.py  file_io.py  language_detection.py  models.py
build_tools/syllable_feature_annotator/: __init__.py  cli.py  random_sampler.py
build_tools/syllable_feature_annotator/analysis/: __init__.py  tsne_visualizer.py
build_tools/syllable_normaliser/: __init__.py
build_tools/syllable_walk/: __init__.py  __main__.py  cli.py  dataset_discovery.py  db.py  profiles.py  run_discovery.py  server.py  walker.py  web_assets.py
build_tools/syllable_walk_tui/: KEYBINDINGS.md  README.md  __init__.py  __main__.py  app.py  config.py  corpus.py  corpus_discovery.py  state.py  walk_controller.py  widgets.py
build_tools/syllable_walk_tui/controls/: __init__.py  browsers.py  inputs.py  sliders.py  spinners.py
build_tools/syllable_walk_tui/core/: __init__.py  actions.py  app.py  handlers.py  state.py  styles.tcss  ui_updates.py
build_tools/syllable_walk_tui/modules/: __init__.py  attenuator.py  conditions_log.py  corpus_meta.py  envelope.py  filter.py  lfo.py  oscillator.py  output.py  patch_cable.py  tabbed_content.py  walk_details.py
build_tools/syllable_walk_tui/services/: __init__.py  combiner_runner.py  config.py  corpus.py  exporter.py  generation.py  metrics.py  packager.py  selector_runner.py
build_tools/syllable_walk_web/: __init__.py  __main__.py  cli.py  dataset_discovery.py  run_discovery.py  server.py  web_assets.py
build_tools/tui_common/: __init__.py  batch.py  cli_utils.py  interactive.py  ledger.py
build_tools/tui_common/controls/: __init__.py  browsers.py  inputs.py  selects.py  sliders.py  spinners.py
build_tools/tui_common/services/: __init__.py  config.py
claude/: development.md
claude/build_tools/: analysis_tools.md  corpus_db.md  corpus_db_viewer.md  feature_annotator.md  syllable_extractor.md  syllable_normaliser.md  syllable_walk.md
data/: name_classes.yml
data/raw/: syllable_extractor.db
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: build_tool_template.rst  build_tool_template_complex.rst
docs/source/build_tools/: analysis_tools.rst  corpus_db.rst  corpus_db_viewer.rst  corpus_sqlite_builder.rst  index.rst  name_selector.rst  nltk_syllable_extractor.rst  nltk_syllable_normaliser.rst  pipeline_tui.rst  tui_common.rst  (+8 more)
examples/: syllable_extraction_example.py
pipeworks_name_generation/: __init__.py  generator.py  renderer.py
pipeworks_name_generation/webapp/: __init__.py  __main__.py  api.py  cli.py  config.py  constants.py  db.py  endpoint_adapters.py  generation.py  handler.py  help_content.py  importer.py  route_registry.py  runtime.py  server.py  storage.py
scripts/: check_rst_docstrings.py  restore_name_packages_db.py
tests/: test_analysis_common.py  test_corpus_db.py  test_corpus_db_integration.py  test_corpus_db_viewer.py  test_dimensionality.py  test_feature_signatures.py  test_language_detection.py  test_nltk_syllable_extractor.py  test_nltk_syllable_normaliser.py  test_pipeworks_renderer.py  test_pipeworks_webapp_api_contracts.py  test_pipeworks_webapp_api_entrypoint.py  test_pipeworks_webapp_cli.py  test_pipeworks_webapp_config.py  test_pipeworks_webapp_db.py  test_pipeworks_webapp_db_backup.py  test_pipeworks_webapp_db_repositories.py  test_pipeworks_webapp_db_table_store.py  test_pipeworks_webapp_favorites.py  test_pipeworks_webapp_frontend_assets.py  test_pipeworks_webapp_http_query.py  test_pipeworks_webapp_importer.py  test_pipeworks_webapp_runtime.py  test_pipeworks_webapp_server.py  test_plotting.py  test_pyphen_syllable_extractor.py  test_pyphen_syllable_extractor_batch.py  test_pyphen_syllable_normaliser.py  test_random_sampler.py  test_syllable_analysis.py  test_syllable_extractor.py  test_syllable_extractor_batch.py  test_syllable_feature_annotator.py  test_syllable_walk.py  test_syllable_walk_cli.py  test_syllable_walk_dataset_discovery.py  test_syllable_walk_db.py  test_syllable_walk_profiles.py  test_syllable_walk_run_discovery.py  test_syllable_walk_server.py  (+4 more)
(+105 files in other folders)
