[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeworks-name-generation"
version = "0.1.0"
description = "Phonetically-grounded name generation for games and procedural systems"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Text Processing :: Linguistic",
]

# Runtime dependencies (minimal for Phase 1)
dependencies = []

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc-typehints>=3.5",
    "sphinx-autoapi>=3.0",
    "myst-parser>=4.0",
    "pyphen>=0.14.0",
]

# Documentation dependencies (for ReadTheDocs)
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc-typehints>=3.5",
    "sphinx-autoapi>=3.0",
    "myst-parser>=4.0",
]

[project.urls]
Homepage = "https://github.com/aa-parky/pipeworks_name_generation"
Repository = "https://github.com/aa-parky/pipeworks_name_generation"
Issues = "https://github.com/aa-parky/pipeworks_name_generation/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=pipeworks_name_generation --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeworks_name_generation*", "build_tools*"]
exclude = ["tests*", "docs*", "examples*", "data*", "scripts*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
