[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeworks-name-generation"
version = "0.5.10"
description = "Phonetically-grounded name generation for games and procedural systems"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Text Processing :: Linguistic",
]

# Runtime dependencies (minimal for Phase 1)
dependencies = []

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "black==26.1.0",
    "isort>=5.13",
    "bandit[toml]>=1.7",
    "build>=1.0",
    "textual>=0.50.0",  # For syllable_walk_tui testing
    "tomli>=2.0.0;python_version<'3.11'",  # TOML parser for config files
    "pyphen>=0.14.0",
    "langdetect>=1.0.9",
    "cmudict>=1.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pyyaml>=6.0",  # For name_classes.yml parsing
    "types-pyyaml>=6.0",  # Type stubs for pyyaml (mypy)
    "sphinx>=8.0,<9.0",  # Pin to 8.x: sphinx-argparse incompatible with 9.0.0/9.0.1
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc-typehints>=3.5",
    "sphinx-autoapi>=3.0",
    "myst-parser>=4.0",
    "sphinx-argparse>=0.4.0",
]

# Build-time tools (for syllable extraction, normalization, annotation, and analysis)
build-tools = [
    "pyphen>=0.14.0",
    "langdetect>=1.0.9",
    "cmudict>=1.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pyyaml>=6.0",  # For name_classes.yml parsing
]

# Documentation dependencies (for ReadTheDocs)
docs = [
    "sphinx>=8.0,<9.0",  # Pin to 8.x: sphinx-argparse incompatible with 9.0.0/9.0.1
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc-typehints>=3.5",
    "sphinx-autoapi>=3.0",
    "myst-parser>=4.0",
    "sphinx-argparse>=0.4.0",
    "textual>=0.50.0",  # Required to import syllable_walk_tui modules during autodoc
]

# TUI dependencies (for syllable_walk_tui)
tui = [
    "textual>=0.50.0",
]

[project.urls]
Homepage = "https://github.com/aa-parky/pipeworks_name_generation"
Repository = "https://github.com/aa-parky/pipeworks_name_generation"
Issues = "https://github.com/aa-parky/pipeworks_name_generation/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=pipeworks_name_generation --cov=build_tools --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeworks_name_generation*", "build_tools*"]
exclude = ["tests*", "docs*", "examples*", "data*", "scripts*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cmudict.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "docs", "_working"]
skips = ["B101"]  # Skip assert_used check (assertions are fine in tests)
